bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.11.1")
bazel_dep(name = "rules_perl", version = "0.2.0")

git_override(
    module_name = "hermetic_cc_toolchain",
    # We need this commit to prevent auto-registration of unwanted toolchains.
    # https://github.com/uber/hermetic_cc_toolchain/pull/190
    commit = "3daaeb4442510add7fcf90645a4d5558fc4a4a32",
    remote = "https://github.com/jvolkman/hermetic_cc_toolchain",
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:linux_amd64_gnu.2.19",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
)

include("//third_party:repositories.MODULE.bazel")
